Report: added pdf metadata

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,7 +1,11 @@
 \documentclass[conference]{IEEEtran}
 \usepackage{float}
 \usepackage{graphicx}
-\usepackage[final]{hyperref} % adds hyper links inside the generated pdf file
+\usepackage[pdftex,
+			final,
+            pdfauthor={Robin Klusman and Luc Gommans},
+            pdftitle={Using imo.im in Forensic Investigations},
+            pdfkeywords={imo.im, imo, forensics}]{hyperref}
 \usepackage{wrapfig}
 \usepackage{booktabs}
 \hypersetup{
